# rust-mcp-sdk

./: .github-issue-comments.md  .gitignore  .pmatignore  CHANGELOG.md  CLAUDE.md  CRATE-README.md  Cargo.toml  MIGRATION.md  Makefile  QUALITY_REPORT.md  README.md  TUTORIAL.md  deny.toml  get-venue-map_ui.html  justfile  mcp.json  server.json
.planning/spikes/004-schema-server-thin-slice-sql/: Cargo.toml
.planning/spikes/005-multi-dialect-sql-connector/: Cargo.toml  config.toml  schema.sql
.planning/spikes/006-authoring-skills-server/: Cargo.toml
cargo-pmcp/: CHANGELOG.md  CORE_TRANSPORT_PATTERN.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_MVP.md  README.md  SCAFFOLD_ADAPTER_IMPLEMENTATION.md  WORKSPACE_SEPARATION_SOLUTION.md
cargo-pmcp/.claude/: gsd-file-manifest.json
cargo-pmcp/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
cargo-pmcp/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cargo-pmcp/.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
cargo-pmcp/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cargo-pmcp/docs/: BINARY_NAMING_CONVENTIONS.md  DEPLOYMENT_METADATA_DESIGN.md  IAM.md  PMCP_RUN_INTEGRATION_UPDATE.md  TEMPLATE_REGISTRY_DESIGN.md  oauth-design.md  oauth-sdk-design.md  pmcp-run-oauth-design.md
cargo-pmcp/docs/commands/: add.md  app.md  connect.md  deploy.md  dev.md  landing.md  loadtest.md  new.md  preview.md  schema.md  secret.md  test.md  validate.md  workbook.md
cargo-pmcp/examples/: deploy_azure_container_apps.rs  deploy_stack_metadata.rs  deploy_with_iam.rs  engine_demo.rs  loadtest_demo.rs  multi_target_monorepo.rs  secrets_local_workflow.rs  secrets_provider_demo.rs  widget_prebuild_demo.rs  workbook_cli_demo.rs  workbook_explain.rs  workbook_server_scaffold.rs
cargo-pmcp/examples/fixtures/: cost-coach.deploy.toml  graph-rag.deploy.toml
cargo-pmcp/fuzz/: Cargo.toml
cargo-pmcp/fuzz/fuzz_targets/: fuzz_azure_config.rs  fuzz_breaking_point.rs  fuzz_config_parse.rs  fuzz_iam_config.rs  fuzz_metadata_config.rs  fuzz_metrics_record.rs  fuzz_widgets_config.rs  pmcp_config_toml_parser.rs
cargo-pmcp/src/: lib.rs  main.rs
cargo-pmcp/src/commands/: add.rs  app.rs  auth.rs  connect.rs  dev.rs  doctor.rs  flags.rs  generate.rs  mod.rs  new.rs  pentest.rs  preview.rs  schema.rs  test.rs  validate.rs
cargo-pmcp/src/deployment/: builder.rs  config.rs  iam.rs  metadata.rs  mod.rs  naming.rs  operations.rs  outputs.rs  post_deploy_tests.rs  registry.rs  trait.rs  widgets.rs
cargo-pmcp/src/landing/: config.rs  mod.rs  template.rs
cargo-pmcp/src/loadtest/: README.md  breaking.rs  client.rs  config.rs  display.rs  engine.rs  error.rs  metrics.rs  mod.rs  report.rs  summary.rs  vu.rs
cargo-pmcp/src/pentest/: README.md  config.rs  discovery.rs  engine.rs  http.rs  mod.rs  rate_limiter.rs  report.rs  sarif.rs  schema_utils.rs  types.rs
cargo-pmcp/src/publishing/: detect.rs  landing.rs  manifest.rs  mod.rs
cargo-pmcp/src/secrets/: config.rs  error.rs  mod.rs  provider.rs  registry.rs  resolve.rs  value.rs
cargo-pmcp/src/templates/: calculator.rs  complete_calculator.rs  mcp_app.rs  mod.rs  openapi_server.rs  server.rs  server_common.rs  sql_server.rs  sqlite_explorer.rs  workbook_server.rs  workspace.rs
cargo-pmcp/src/utils/: config.rs  mod.rs
cargo-pmcp/templates/landing/: README.md
cargo-pmcp/tests/: apps_helpers.rs  auth_integration.rs  backward_compat_stack_ts.rs  cli_acceptance.rs  cloud_run_local_build.rs  configure_integration.rs  deploy_config_driven.rs  deploy_config_only.rs  deploy_post_deploy_flags.rs  deploy_stack_ts_guard.rs  engine_property_tests.rs  iam_config.rs  post_deploy_orchestrator.rs  post_deploy_tests_config.rs  property_tests.rs  scaffold_openapi_server.rs  scaffold_sql_server.rs  test_format_json.rs  widgets_config.rs  widgets_orchestrator.rs  widgets_raw_html.rs  workbook_cli_integration.rs  workbook_explain.rs  workbook_scaffold.rs
cargo-pmcp/tests/fixtures/: cost-coach-widgets.deploy.toml  mcp_widget_server.rs.todo  mock_test_binary.rs  post-deploy-fail.deploy.toml  post-deploy-rollback-rejected.deploy.toml
cargo-pmcp/tests/golden/: aws-lambda-empty.ts  deploy-toml-no-azure.golden.toml  pmcp-run-empty.ts
cargo-pmcp/tests/support/: scaffold_patch.rs
crates/mcp-e2e-tests/: Cargo.toml  README.md
crates/mcp-e2e-tests/src/: bridge.rs  lib.rs  server.rs
crates/mcp-preview/: Cargo.toml  README.md
crates/mcp-tester/: CHANGELOG.md  Cargo.toml  README.md  UI_RENDERING.md
crates/pmcp-code-mode/: CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  README.md  SECURITY.md
crates/pmcp-code-mode-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/pmcp-macros-support/: Cargo.toml  README.md
crates/pmcp-openapi-server/: Cargo.toml  README.md
crates/pmcp-server/: Cargo.toml  README.md
crates/pmcp-server-toolkit/: Cargo.toml  README.md
crates/pmcp-sql-server/: Cargo.toml  README.md
crates/pmcp-tasks/: Cargo.toml
crates/pmcp-toolkit-athena/: Cargo.toml
crates/pmcp-toolkit-mysql/: Cargo.toml
crates/pmcp-toolkit-postgres/: Cargo.toml
crates/pmcp-workbook-compiler/: Cargo.toml  SPIKE-1900-leap.md
crates/pmcp-workbook-dialect/: Cargo.toml  deny.toml
crates/pmcp-workbook-runtime/: Cargo.toml  deny.toml
crates/pmcp-workbook-server/: Cargo.toml  README.md
deploy/cloudflare/: .gitignore  Cargo.toml  wrangler.toml
examples/27-course-server-minimal/: Cargo.toml  Makefile  README.md
examples/mcp-apps-chess/: Cargo.toml  README.md  preview.html
examples/mcp-apps-dataviz/: Cargo.toml  README.md
examples/mcp-apps-map/: Cargo.toml  README.md  preview.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: app_widget_scanner.rs  auth_flows.rs  dcr_response_parser.rs  fuzz_graphql_code_mode.rs  fuzz_javascript_code_mode.rs  fuzz_peer_handle.rs  fuzz_token_code_mode.rs  jsonrpc_handling.rs  list_all_cursor_loop.rs  pkce_helper.rs  protocol_parsing.rs  rustdoc_normalize.rs  transport_layer.rs
(+2737 files in other folders)
