[package]
name = "pmcp"
version = "2.3.0"
edition = "2021"
authors = ["PAIML Team"]
description = "High-quality Rust SDK for Model Context Protocol (MCP) with full TypeScript SDK compatibility"
license = "MIT"
repository = "https://github.com/paiml/pmcp"
homepage = "https://github.com/paiml/pmcp"
documentation = "https://docs.rs/pmcp"
readme = "README.md"
keywords = ["mcp", "model-context", "sdk", "ai", "llm"]
categories = ["api-bindings", "asynchronous", "network-programming"]
rust-version = "1.83.0"
exclude = [
    "docs/",
    "packages/",
    "tests/playwright/",
    "benches/*.bak",
    "fuzz/",
    "examples/mcp-apps-chess/",
    "examples/mcp-apps-map/",
    "examples/wasm-client/",
    "examples/wasm-mcp-server/",
    "examples/cloudflare-worker-mcp/",
    "examples/26-server-tester/",
    "examples/27-course-server-minimal/",
    "examples/25-oauth-basic/",
    "examples/test-basic/",
    "examples/wasm/",
    "pmcp-book/",
    "pmcp-course/",
    "examples/60_tasks_basic.rs",
    "examples/62_task_workflow_lifecycle.rs",
    "examples/65_durable_mcp_agent.rs",
    # PMAT / PV tooling metadata — not part of the published crate.
    # .pmat/context.db alone is ~21MB and blew past the 10MB crates.io limit
    # during the v2.2.0 release. Keep these out of every future release.
    ".pmat/",
    ".pv/",
    "contracts/",
    # GSD phase planning (6.3MB) and presentation decks (5.6MB) — workspace
    # scaffolding, not crate content. Also blew the 10MB limit during v2.2.0.
    ".planning/",
    "presentations/",
]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
schemars = { version = "1.0", optional = true }
pmcp-macros = { version = "0.5.0", path = "pmcp-macros", optional = true }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
http = "1.1"

# Utility dependencies (needed on all platforms)
glob = "0.3"
url = "2.5"
toml = "1.0"
uuid = { version = "1.17", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
regex = "1.11"
urlencoding = "2.1"
indexmap = { version = "2.10", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde", "union"] }
parking_lot = "0.12"
dashmap = "6.1"
bytes = { version = "1.10", optional = true }
futures = "0.3"
pmcp-widget-utils = { path = "crates/pmcp-widget-utils", version = "0.1.0" }
futures-util = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-locks = { version = "0.7", optional = true, default-features = false }
http-body-util = "0.1"

# OAuth dependencies
sha2 = "0.11"
base64 = "0.22"
jsonwebtoken = { version = "10.3", optional = true }

# OAuth CLI helper dependencies (feature-gated)
webbrowser = { version = "1", optional = true }
dirs = { version = "6", optional = true }
rand = { version = "0.10", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }

# Transport dependencies (optional, feature-gated)
tokio-tungstenite = { version = "0.29", optional = true }
hyper = { version = "1.6", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto", "client-legacy"], optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "ring", "native-tokio"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
axum = { version = "0.8.5", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "set-header"], optional = true }

# File watching dependencies (optional, feature-gated)
notify = { version = "8.2", optional = true }
glob-match = { version = "0.2", optional = true }

# Validation (optional, feature-gated)
jsonschema = { version = "0.45", optional = true, default-features = false }
garde = { version = "0.22", optional = true }

# SIMD support (optional)
rayon = { version = "1.10", optional = true }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "fs", "sync", "time", "process", "signal"] }
tokio-stream = { version = "0.1.15" }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "rustls", "form"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType", "Headers", "Request", "RequestInit", "Response"] }
js-sys = "0.3"
futures-channel = "0.3"
futures-locks = { version = "0.7", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
# Testing
tempfile = "3.19"
proptest = "1.7"
quickcheck = "1.0"
quickcheck_macros = "1.1"
rstest = "0.26"
mockall = "0.14"
pretty_assertions = "1.4"
test-case = "3.3"
criterion = { version = "0.8", features = ["html_reports"] }
insta = { version = "1.43", features = ["json", "redactions"] }
mockito = "1.5.0"
tokio-util = { version = "0.7", features = ["rt"] }

# For examples
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
dashmap = "6.1"  # Already in main deps but needed for examples
pmcp-macros = { version = "0.5.0", path = "pmcp-macros" }  # For macro examples (s23_mcp_tool_macro)
pmcp-code-mode = { version = "0.3.0", path = "crates/pmcp-code-mode" }  # For code mode example (s41)
pmcp-code-mode-derive = { version = "0.2.0", path = "crates/pmcp-code-mode-derive" }  # For code mode example (s41)

[features]
default = ["logging"]
full = ["websocket", "http", "streamable-http", "sse", "validation", "resource-watcher", "rayon", "schema-generation", "jwt-auth", "composition", "mcp-apps", "http-client", "logging", "macros"]
composition = ["streamable-http"]
# MCP Apps Extension - Interactive UI support for ChatGPT Apps, MCP-UI, and standard MCP hosts
mcp-apps = []
jwt-auth = ["http-client", "dep:jsonwebtoken"]
http-client = ["dep:reqwest"]
logging = ["dep:tracing-subscriber"]
oauth = ["http-client", "dep:webbrowser", "dep:dirs", "dep:rand"]
sse = ["http-client", "dep:bytes"]
websocket = ["dep:tokio-tungstenite"]
http = ["dep:hyper", "dep:hyper-util", "dep:bytes"]
streamable-http = ["dep:hyper", "dep:hyper-util", "dep:hyper-rustls", "dep:rustls", "dep:futures-util", "dep:bytes", "dep:axum", "dep:tower", "dep:tower-http"]
validation = ["dep:jsonschema", "dep:garde"]
resource-watcher = ["dep:notify", "dep:glob-match"]
schema-generation = ["dep:schemars"]
macros = ["dep:pmcp-macros", "schema-generation"]
wasm = ["websocket-wasm", "uuid/js", "dep:futures-channel", "dep:futures-locks"]
websocket-wasm = []
wasm-tokio = []
wasi-http = []  # Future: WASI HTTP support (not yet implemented)

# Example features
authentication_example = []
cancellation_example = []
progress_example = []

# Performance optimizations
unstable = []
simd = []
rayon = ["dep:rayon"]

# Testing support
test-helpers = []

[[bench]]
name = "simple_test"
harness = false

[[bench]]
name = "json_performance"
harness = false

[[bench]]
name = "protocol_serialization"
harness = false

[[bench]]
name = "transport_performance"
harness = false

[[bench]]
name = "client_server_operations"
harness = false

[[bench]]
name = "simd_performance"
harness = false

[profile.release]
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
codegen-units = 1
opt-level = 3
debug = true

[[example]]
name = "c01_client_initialize"
path = "examples/c01_client_initialize.rs"

[[example]]
name = "s01_basic_server"
path = "examples/s01_basic_server.rs"

[[example]]
name = "c02_client_tools"
path = "examples/c02_client_tools.rs"

[[example]]
name = "s03_server_resources"
path = "examples/s03_server_resources.rs"

[[example]]
name = "c03_client_resources"
path = "examples/c03_client_resources.rs"

[[example]]
name = "s05_server_prompts"
path = "examples/s05_server_prompts.rs"

[[example]]
name = "c04_client_prompts"
path = "examples/c04_client_prompts.rs"

[[example]]
name = "s07_logging"
path = "examples/s07_logging.rs"

[[example]]
name = "s04_server_resources_collection"
path = "examples/s04_server_resources_collection.rs"

[[example]]
name = "s28_authentication"
path = "examples/s28_authentication.rs"
required-features = ["authentication_example"]

[[example]]
name = "s08_progress_notifications"
path = "examples/s08_progress_notifications.rs"
required-features = ["progress_example"]

[[example]]
name = "s09_progress_countdown"
path = "examples/s09_progress_countdown.rs"

[[example]]
name = "s10_request_cancellation"
path = "examples/s10_request_cancellation.rs"
required-features = ["cancellation_example"]

[[example]]
name = "s11_error_handling"
path = "examples/s11_error_handling.rs"

[[example]]
name = "s38_prompt_workflow_progress"
path = "examples/s38_prompt_workflow_progress.rs"

[[example]]
name = "t01_websocket_transport"
path = "examples/t01_websocket_transport.rs"
required-features = ["websocket"]

[[example]]
name = "s12_sampling_llm"
path = "examples/s12_sampling_llm.rs"

[[example]]
name = "m01_basic_middleware"
path = "examples/m01_basic_middleware.rs"

[[example]]
name = "s29_oauth_server"
path = "examples/s29_oauth_server.rs"

[[example]]
name = "s06_completable_prompts"
path = "examples/s06_completable_prompts.rs"

[[example]]
name = "s14_resource_watcher"
path = "examples/s14_resource_watcher.rs"
required-features = ["resource-watcher"]

[[example]]
name = "s13_elicit_input"
path = "examples/s13_elicit_input.rs"

[[example]]
name = "c07_oidc_discovery"
path = "examples/c07_oidc_discovery.rs"
required-features = ["http-client"]

[[example]]
name = "t04_streamable_http_stateful"
path = "examples/t04_streamable_http_stateful.rs"
required-features = ["streamable-http"]

[[example]]
name = "t05_streamable_http_stateless"
path = "examples/t05_streamable_http_stateless.rs"
required-features = ["streamable-http"]

[[example]]
name = "t06_streamable_http_client"
path = "examples/t06_streamable_http_client.rs"
required-features = ["streamable-http"]

[[example]]
name = "t02_websocket_server_enhanced"
path = "examples/t02_websocket_server_enhanced.rs"
required-features = ["websocket"]

[[example]]
name = "t03_sse_optimized"
path = "examples/t03_sse_optimized.rs"
required-features = ["sse"]

[[example]]
name = "t07_connection_pool"
path = "examples/t07_connection_pool.rs"
required-features = ["full"]

[[example]]
name = "m02_enhanced_middleware"
path = "examples/m02_enhanced_middleware.rs"
required-features = ["full"]

[[example]]
name = "m07_advanced_error_recovery"
path = "examples/m07_advanced_error_recovery.rs"
required-features = ["full"]

[[example]]
name = "t08_simd_parsing_performance"
path = "examples/t08_simd_parsing_performance.rs"

[[example]]
name = "s16_typed_tools"
path = "examples/s16_typed_tools.rs"
required-features = ["schema-generation"]

[[example]]
name = "s17_advanced_typed_tools"
path = "examples/s17_advanced_typed_tools.rs"
required-features = ["schema-generation"]

[[example]]
name = "s18_serverbuilder_typed"
path = "examples/s18_serverbuilder_typed.rs"
required-features = ["schema-generation"]

[[example]]
name = "s19_wasm_typed_tools"
path = "examples/s19_wasm_typed_tools.rs"
required-features = ["schema-generation"]

[[example]]
name = "s20_typed_tool_v2"
path = "examples/s20_typed_tool_v2.rs"
required-features = ["schema-generation"]

[[example]]
name = "s21_description_variants"
path = "examples/s21_description_variants.rs"
required-features = ["schema-generation"]

[[example]]
name = "m03_middleware_demo"
path = "examples/m03_middleware_demo.rs"

[[example]]
name = "c06_multiple_clients_parallel"
path = "examples/c06_multiple_clients_parallel.rs"

[[example]]
name = "s22_structured_output_schema"
path = "examples/s22_structured_output_schema.rs"

[[example]]
name = "s30_tool_with_sampling"
path = "examples/s30_tool_with_sampling.rs"
required-features = ["full"]

[[example]]
name = "s31_workflow_minimal"
path = "examples/s31_workflow_minimal.rs"

[[example]]
name = "s32_workflow_error_messages"
path = "examples/s32_workflow_error_messages.rs"

[[example]]
name = "s33_workflow_dsl_cookbook"
path = "examples/s33_workflow_dsl_cookbook.rs"

[[example]]
name = "s34_typed_tools_workflow"
path = "examples/s34_typed_tools_workflow.rs"
required-features = ["schema-generation"]

[[example]]
name = "s35_hybrid_workflow"
path = "examples/s35_hybrid_workflow.rs"

[[example]]
name = "m04_server_http_middleware"
path = "examples/m04_server_http_middleware.rs"
required-features = ["streamable-http"]

[[example]]
name = "s15_dynamic_resources"
path = "examples/s15_dynamic_resources.rs"

[[example]]
name = "m05_tool_middleware_oauth"
path = "examples/m05_tool_middleware_oauth.rs"

[[example]]
name = "m06_oauth_transport_to_tools"
path = "examples/m06_oauth_transport_to_tools.rs"

[[example]]
name = "s36_dynamic_resource_workflow"
path = "examples/s36_dynamic_resource_workflow.rs"

[[example]]
name = "s37_resource_only_steps"
path = "examples/s37_resource_only_steps.rs"

[[example]]
name = "m08_observability_middleware"
path = "examples/m08_observability_middleware.rs"

[[example]]
name = "c05_client"
path = "examples/c05_client.rs"

[[example]]
name = "s39_mcp_app_venue_map"
path = "examples/s39_mcp_app_venue_map.rs"
required-features = ["schema-generation"]

[[example]]
name = "s26_currency_server"
path = "examples/s26_currency_server.rs"

[[example]]
name = "s40_mcp_app_hotel_gallery"
path = "examples/s40_mcp_app_hotel_gallery.rs"
required-features = ["schema-generation"]

[[example]]
name = "s25_refactored_server"
path = "examples/s25_refactored_server.rs"

[[example]]
name = "s02_server"
path = "examples/s02_server.rs"

[[example]]
name = "s27_test_currency_server"
path = "examples/s27_test_currency_server.rs"

[[example]]
name = "s23_mcp_tool_macro"
path = "examples/s23_mcp_tool_macro.rs"
required-features = ["full"]

[[example]]
name = "s24_mcp_prompt_macro"
path = "examples/s24_mcp_prompt_macro.rs"
required-features = ["full"]

[[example]]
name = "s41_code_mode_graphql"
path = "examples/s41_code_mode_graphql.rs"
required-features = ["full"]

[[bench]]
name = "comprehensive_benchmarks"
harness = false
[workspace]
members = ["pmcp-macros", "crates/mcp-tester", "crates/mcp-preview", "crates/pmcp-server", "crates/pmcp-server/pmcp-server-lambda", "crates/pmcp-tasks", "crates/mcp-e2e-tests", "crates/pmcp-widget-utils", "crates/pmcp-code-mode", "crates/pmcp-code-mode-derive", "examples/25-oauth-basic", "examples/test-basic", "cargo-pmcp"]
# WASM examples and standalone examples are excluded from regular workspace tests
exclude = ["fuzz", "examples/cloudflare-worker-mcp", "examples/26-server-tester", "examples/27-course-server-minimal", "examples/wasm-client", "examples/mcp-apps-chess", "examples/mcp-apps-map", "examples/mcp-apps-dataviz"]

[package.metadata.docs.rs]
features = [
    "composition",
    "http",
    "http-client",
    "jwt-auth",
    "macros",
    "mcp-apps",
    "oauth",
    "rayon",
    "resource-watcher",
    "schema-generation",
    "simd",
    "sse",
    "streamable-http",
    "validation",
    "websocket",
]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
