[package]
name = "cargo-pmcp"
version = "0.1.0"
edition = "2021"
authors = ["PMCP SDK Contributors"]
description = "Production-grade MCP server development toolkit"
license = "MIT"
repository = "https://github.com/paiml/rust-mcp-sdk"
readme = "README.md"
keywords = ["mcp", "scaffold", "cli", "tools", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
walkdir = "2"
colored = "3"
indicatif = "0.18"
dirs = "6"
glob = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
mcp-tester = { path = "../crates/mcp-tester" }
urlencoding = "2"
async-trait = "0.1.89"
pathdiff = "0.2.3"
cargo_metadata = "0.23"

# For pmcp-run target and landing pages
oauth2 = "5.0"                          # OAuth 2.0 authentication
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }  # HTTP client with multipart support
tiny_http = "0.12"                      # OAuth callback server
open = "5.0"                            # Browser launch
chrono = "0.4"                          # Token expiry handling
rpassword = "7.3"                       # Secret input (for other features)
zip = "7.0"                             # Zip file creation for landing page deployment

# For schema discovery and code generation
console = "0.16"                        # Terminal styling for schema commands
thiserror = "2"                         # Error types for generated code
