[package]
name = "cargo-pmcp"
version = "0.1.1"
edition = "2021"
authors = ["PMCP SDK Contributors"]
description = "Production-grade MCP server development toolkit"
license = "MIT"
repository = "https://github.com/paiml/rust-mcp-sdk"
readme = "README.md"
keywords = ["mcp", "scaffold", "cli", "tools", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
walkdir = "2"
colored = "3"
indicatif = "0.18"
dirs = "6"
glob = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
mcp-tester = { version = "0.2.0", path = "../crates/mcp-tester" }
mcp-preview = { version = "0.1.0", path = "../crates/mcp-preview" }
urlencoding = "2"
async-trait = "0.1.89"
pathdiff = "0.2.3"
cargo_metadata = "0.19"

# For pmcp-run target and landing pages
oauth2 = "5.0"                          # OAuth 2.0 authentication
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }  # HTTP client with multipart support
tiny_http = "0.12"                      # OAuth callback server
open = "5.0"                            # Browser launch
chrono = "0.4"                          # Token expiry handling
rpassword = "7.3"                       # Secret input (for other features)
zip = "8.1"                             # Zip file creation for landing page deployment

# For schema discovery and code generation
console = "0.16"                        # Terminal styling for schema commands
thiserror = "2"                         # Error types for generated code

# For secrets management
secrecy = { version = "0.10", features = ["serde"] }  # Secure secret handling with zeroization
zeroize = "1"                           # Secure memory clearing
rand = "0.10"                            # Random secret generation
atty = "0.2"                            # Terminal detection for security warnings
regex = "1"                             # Secret reference parsing

# AWS Secrets Manager (optional, for AWS provider)
aws-config = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
