[package]
name = "cargo-pmcp"
version = "0.12.0"
edition = "2021"
authors = ["PMCP SDK Contributors"]
description = "Production-grade MCP server development toolkit"
license = "MIT"
repository = "https://github.com/paiml/rust-mcp-sdk"
readme = "README.md"
keywords = ["mcp", "scaffold", "cli", "tools", "development"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cargo_pmcp"
path = "src/lib.rs"

[[bin]]
name = "cargo-pmcp"
path = "src/main.rs"

# Phase 79 Wave 3 (Plan 79-03): test-only mock binary used by the
# `post_deploy_orchestrator` integration tests via the `PMCP_TEST_FIXTURE_EXE`
# env-var injection point. NOT shipped — the binary has no production purpose
# and exists solely so `env!("CARGO_BIN_EXE_mock_test_binary")` resolves under
# `cargo test`. Cargo always builds declared `[[bin]]` targets, so this adds
# ~1s to `cargo build`; the implementation is dep-free (no serde, no clap) to
# minimise that.
[[bin]]
name = "mock_test_binary"
path = "tests/fixtures/mock_test_binary.rs"
test = false
bench = false
doctest = false

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
walkdir = "2"
colored = "3"
indicatif = "0.18"
dirs = "6"
dotenvy = "0.15"
glob = "0.3"
# For load testing metrics
hdrhistogram = "7.5"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
pmcp = { version = "2.6.0", path = "..", features = ["streamable-http", "oauth"] }
mcp-tester = { version = "0.6.0", path = "../crates/mcp-tester" }
mcp-preview = { version = "0.3.0", path = "../crates/mcp-preview" }
urlencoding = "2"
async-trait = "0.1.89"
pathdiff = "0.2.3"
cargo_metadata = "0.23"

# For pmcp-run target and landing pages
oauth2 = "5.0"                          # OAuth 2.0 authentication
reqwest = { version = "0.13", features = ["json", "multipart", "rustls", "form"], default-features = false }  # HTTP client with multipart support
tiny_http = "0.12"                      # OAuth callback server
open = "5.0"                            # Browser launch
chrono = "0.4"                          # Token expiry handling
rpassword = "7.3"                       # Secret input (for other features)
zip = "8.1"                             # Zip file creation for landing page deployment

# For schema discovery and code generation
console = "0.16"                        # Terminal styling for schema commands
tempfile = "3"                          # Atomic token cache writes (auth_cmd::cache)
thiserror = "2"                         # Error types for generated code
url = "2"                               # URL normalization for cache keys

# For secrets management
secrecy = { version = "0.10", features = ["serde"] }  # Secure secret handling with zeroization
zeroize = "1"                           # Secure memory clearing
rand = "0.10"                            # Random secret generation
regex = "1"                             # Secret reference parsing

# AWS Secrets Manager (optional, for AWS provider)
aws-config = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }

# For security penetration testing
serde-sarif = "0.8"
governor = "0.10"
sha2 = "0.11"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
proptest = "1"
serial_test = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
aws-secrets = ["aws-config", "aws-sdk-secretsmanager"]
