[package]
name = "pmcp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
bytes = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
pmcp-macros-support = { path = "../crates/pmcp-macros-support" }
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dependencies.pmcp]
path = ".."
default-features = false
features = ["oauth"]

[dependencies.pmcp-code-mode]
path = "../crates/pmcp-code-mode"
default-features = false
features = ["openapi-code-mode"]

[dependencies.mcp-tester]
path = "../crates/mcp-tester"

[[bin]]
name = "protocol_parsing"
path = "fuzz_targets/protocol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jsonrpc_handling"
path = "fuzz_targets/jsonrpc_handling.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_layer"
path = "fuzz_targets/transport_layer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_flows"
path = "fuzz_targets/auth_flows.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_graphql_code_mode"
path = "fuzz_targets/fuzz_graphql_code_mode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_javascript_code_mode"
path = "fuzz_targets/fuzz_javascript_code_mode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_token_code_mode"
path = "fuzz_targets/fuzz_token_code_mode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_peer_handle"
path = "fuzz_targets/fuzz_peer_handle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rustdoc_normalize"
path = "fuzz_targets/rustdoc_normalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dcr_response_parser"
path = "fuzz_targets/dcr_response_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "list_all_cursor_loop"
path = "fuzz_targets/list_all_cursor_loop.rs"
test = false
doc = false
bench = false

[[bin]]
name = "app_widget_scanner"
path = "fuzz_targets/app_widget_scanner.rs"
test = false
doc = false
bench = false
