[package]
name = "mcp-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "End-to-end browser tests for MCP App widgets"

[dependencies]
chromiumoxide = { version = "0.9", features = ["fetcher", "rustls", "zip0"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
