[package]
name = "mcp-preview"
version = "0.1.0"
edition = "2021"
description = "MCP Apps Preview Server - Browser-based UI testing for MCP widgets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rust-mcp-sdk"
keywords = ["mcp", "preview", "widget", "chatgpt", "testing"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Embedded assets
rust-embed = "8"
mime_guess = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for MCP proxy
reqwest = { version = "0.12", features = ["json"] }

# Widget utilities (shared with pmcp core)
pmcp-widget-utils = { path = "../pmcp-widget-utils" }

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
anyhow = "1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
