[package]
name = "pmcp-macros-support"
version = "0.1.0"
edition = "2021"
authors = ["PAIML Team"]
description = "Pure helpers for pmcp-macros — non-proc-macro sibling crate for the rustdoc-harvest normalizer, so property tests and fuzz targets can consume the logic without proc-macro API restrictions."
license = "MIT"
repository = "https://github.com/paiml/pmcp"
homepage = "https://github.com/paiml/pmcp"
documentation = "https://docs.rs/pmcp-macros-support"
readme = "README.md"
keywords = ["mcp", "macros", "rustdoc", "support", "model-context"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.82.0"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"

[dev-dependencies]
proptest = "1.6"
